# SwiftNext-Backend

./: .gitignore  Cargo.toml  DATABASE  README.md  api.py  app.py  app_dev.py  config.py  demo.html  email_notify.py  errors.py  frontend.py  models.py  server_config.toml  sessions.py  sio.py  test_detect.html  testsio.py  utils.py  verify_code.cn.html  verify_code.en.html  vertex.py
apis/: __init__.py  detector.py  groups.py  notifications.py  positions.py  projects.py  records.py  storage.py  system.http  system.py  users.py
docs/: SocketIO.md  填报类API records.md  数据库.md  文件类API storage.md  用户类API users.md  社区类API community.md  系统类API system.md  系统通知用邮箱：notify@bwrrc.org.cn.md  综述 概念解释.md  识别类API detector.md  调查点API positions.md  调查组类API groups.md  通知类API notifications.md  项目类API projects.md
models/: __init__.py  detections.py  storage.py
src/: config.rs  main.rs
src/apis/: index.http  mod.rs
src/models/: mod.rs
ssl/: fullchain.pem  privkey.pem
