[package]
name = "swift_next_backend"
version = "0.1.0"
edition = "2021"
authors = ["lihe07"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
badlog = "1.1.1"
tide = "0.16.0"
serde = "1.0.133"
async-std="1.10.0"
toml = "0.5.8"

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["async-std-runtime"]